CSE420/lab-02/y.output
Terminals unused in grammar

    SWITCH
    CASE
    DEFAULT
    DO
    BREAK
    CONTINUE
    CHAR
    DOUBLE


Rules useless in parser due to conflicts

   61 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement


State 114 conflicts: 18 reduce/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 compound_statement: LCURL statements RCURL
    9                   | LCURL RCURL

   10 parameter_list: parameter_list COMMA type_specifier ID
   11               | parameter_list COMMA type_specifier
   12               | type_specifier ID
   13               | type_specifier

   14 type_specifier: INT
   15               | FLOAT
   16               | VOID

   17 var_declaration: type_specifier declaration_list SEMICOLON

   18 declaration_list: declaration_list COMMA ID
   19                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   20                 | ID
   21                 | ID LTHIRD CONST_INT RTHIRD

   22 statements: statement
   23           | statements statement

   24 statement: var_declaration
   25          | expression_statement
   26          | compound_statement
   27          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   28          | IF LPAREN expression RPAREN statement
   29          | IF LPAREN expression RPAREN statement ELSE statement
   30          | WHILE LPAREN expression RPAREN statement
   31          | PRINTLN LPAREN ID RPAREN SEMICOLON
   32          | RETURN expression SEMICOLON

   33 variable: ID
   34         | ID LTHIRD expression RTHIRD

   35 expression: logic_expression
   36           | variable ASSIGNOP logic_expression

   37 logic_expression: rel_expression
   38                 | rel_expression LOGICOP rel_expression

   39 rel_expression: simple_expression
   40               | simple_expression RELOP simple_expression

   41 simple_expression: term
   42                  | simple_expression ADDOP term

   43 term: unary_expression
   44     | term MULOP unary_expression

   45 unary_expression: ADDOP unary_expression
   46                 | NOT unary_expression
   47                 | factor

   48 expression_statement: SEMICOLON
   49                     | expression SEMICOLON

   50 factor: variable
   51       | ID LPAREN argument_list RPAREN
   52       | LPAREN expression RPAREN
   53       | CONST_INT
   54       | CONST_FLOAT
   55       | variable INCOP
   56       | variable DECOP

   57 argument_list: arguments
   58              | ε

   59 arguments: arguments COMMA logic_expression
   60          | logic_expression

   61 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 28 29
    ELSE (259) 29
    SWITCH (260)
    CASE (261)
    DEFAULT (262)
    FOR (263) 27 61
    WHILE (264) 30
    DO (265)
    BREAK (266)
    CONTINUE (267)
    RETURN (268) 32
    PRINTLN (269) 31
    NOT (270) 46
    LPAREN (271) 6 7 27 28 29 30 31 51 52 61
    RPAREN (272) 6 7 27 28 29 30 31 51 52 61
    LCURL (273) 8 9
    RCURL (274) 8 9
    LTHIRD (275) 19 21 34
    RTHIRD (276) 19 21 34
    INT (277) 14
    FLOAT (278) 15
    CHAR (279)
    VOID (280) 16
    DOUBLE (281)
    SEMICOLON (282) 17 31 32 48 49
    COMMA (283) 10 11 18 19 59
    ID (284) 6 7 10 12 18 19 20 21 31 33 34 51
    CONST_INT (285) 19 21 53
    CONST_FLOAT (286) 54
    ADDOP (287) 42 45
    MULOP (288) 44
    INCOP (289) 55
    DECOP (290) 56
    RELOP (291) 40
    ASSIGNOP (292) 36
    LOGICOP (293) 38


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    start (40)
        on left: 1
        on right: 0
    program (41)
        on left: 2 3
        on right: 1 2
    unit (42)
        on left: 4 5
        on right: 2 3
    func_definition (43)
        on left: 6 7
        on right: 5
    compound_statement (44)
        on left: 8 9
        on right: 6 7 26
    parameter_list (45)
        on left: 10 11 12 13
        on right: 6 10 11
    type_specifier (46)
        on left: 14 15 16
        on right: 6 7 10 11 12 13 17
    var_declaration (47)
        on left: 17
        on right: 4 24
    declaration_list (48)
        on left: 18 19 20 21
        on right: 17 18 19
    statements (49)
        on left: 22 23
        on right: 8 23
    statement (50)
        on left: 24 25 26 27 28 29 30 31 32 61
        on right: 22 23 27 28 29 30 61
    variable (51)
        on left: 33 34
        on right: 36 50 55 56
    expression (52)
        on left: 35 36
        on right: 27 28 29 30 32 34 49 52 61
    logic_expression (53)
        on left: 37 38
        on right: 35 36 59 60
    rel_expression (54)
        on left: 39 40
        on right: 37 38
    simple_expression (55)
        on left: 41 42
        on right: 39 40 42
    term (56)
        on left: 43 44
        on right: 41 42 44
    unary_expression (57)
        on left: 45 46 47
        on right: 43 44 45 46
    expression_statement (58)
        on left: 48 49
        on right: 25 27 61
    factor (59)
        on left: 50 51 52 53 54 55 56
        on right: 47
    argument_list (60)
        on left: 57 58
        on right: 51
    arguments (61)
        on left: 59 60
        on right: 57 59


State 0

    0 $accept: • start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    type_specifier   go to state 8
    var_declaration  go to state 9


State 1

   14 type_specifier: INT •

    $default  reduce using rule 14 (type_specifier)


State 2

   15 type_specifier: FLOAT •

    $default  reduce using rule 15 (type_specifier)


State 3

   16 type_specifier: VOID •

    $default  reduce using rule 16 (type_specifier)


State 4

    0 $accept: start • $end

    $end  shift, and go to state 10


State 5

    1 start: program •
    2 program: program • unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    type_specifier   go to state 8
    var_declaration  go to state 9


State 6

    3 program: unit •

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition •

    $default  reduce using rule 5 (unit)


State 8

    6 func_definition: type_specifier • ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier • ID LPAREN RPAREN compound_statement
   17 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 9

    4 unit: var_declaration •

    $default  reduce using rule 4 (unit)


State 10

    0 $accept: start $end •

    $default  accept


State 11

    2 program: program unit •

    $default  reduce using rule 2 (program)


State 12

    6 func_definition: type_specifier ID • LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID • LPAREN RPAREN compound_statement
   20 declaration_list: ID •
   21                 | ID • LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 20 (declaration_list)


State 13

   17 var_declaration: type_specifier declaration_list • SEMICOLON
   18 declaration_list: declaration_list • COMMA ID
   19                 | declaration_list • COMMA ID LTHIRD CONST_INT RTHIRD

    SEMICOLON  shift, and go to state 16
    COMMA      shift, and go to state 17


State 14

    6 func_definition: type_specifier ID LPAREN • parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN • RPAREN compound_statement

    RPAREN  shift, and go to state 18
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3

    parameter_list  go to state 19
    type_specifier  go to state 20


State 15

   21 declaration_list: ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 16

   17 var_declaration: type_specifier declaration_list SEMICOLON •

    $default  reduce using rule 17 (var_declaration)


State 17

   18 declaration_list: declaration_list COMMA • ID
   19                 | declaration_list COMMA • ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 18

    7 func_definition: type_specifier ID LPAREN RPAREN • compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 24


State 19

    6 func_definition: type_specifier ID LPAREN parameter_list • RPAREN compound_statement
   10 parameter_list: parameter_list • COMMA type_specifier ID
   11               | parameter_list • COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   12 parameter_list: type_specifier • ID
   13               | type_specifier •

    ID  shift, and go to state 27

    $default  reduce using rule 13 (parameter_list)


State 21

   21 declaration_list: ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 28


State 22

   18 declaration_list: declaration_list COMMA ID •
   19                 | declaration_list COMMA ID • LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 18 (declaration_list)


State 23

    8 compound_statement: LCURL • statements RCURL
    9                   | LCURL • RCURL

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 37
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    SEMICOLON    shift, and go to state 38
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    compound_statement    go to state 43
    type_specifier        go to state 44
    var_declaration       go to state 45
    statements            go to state 46
    statement             go to state 47
    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    expression_statement  go to state 55
    factor                go to state 56


State 24

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement •

    $default  reduce using rule 7 (func_definition)


State 25

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN • compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 57


State 26

   10 parameter_list: parameter_list COMMA • type_specifier ID
   11               | parameter_list COMMA • type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 58


State 27

   12 parameter_list: type_specifier ID •

    $default  reduce using rule 12 (parameter_list)


State 28

   21 declaration_list: ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 21 (declaration_list)


State 29

   19 declaration_list: declaration_list COMMA ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 59


State 30

   28 statement: IF • LPAREN expression RPAREN statement
   29          | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


State 31

   27 statement: FOR • LPAREN expression_statement expression_statement expression RPAREN statement
   61          | FOR • LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 61


State 32

   30 statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 62


State 33

   32 statement: RETURN • expression SEMICOLON

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable           go to state 48
    expression         go to state 63
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56


State 34

   31 statement: PRINTLN • LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 64


State 35

   46 unary_expression: NOT • unary_expression

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable          go to state 65
    unary_expression  go to state 66
    factor            go to state 56


State 36

   52 factor: LPAREN • expression RPAREN

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable           go to state 48
    expression         go to state 67
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56


State 37

    9 compound_statement: LCURL RCURL •

    $default  reduce using rule 9 (compound_statement)


State 38

   48 expression_statement: SEMICOLON •

    $default  reduce using rule 48 (expression_statement)


State 39

   33 variable: ID •
   34         | ID • LTHIRD expression RTHIRD
   51 factor: ID • LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 68
    LTHIRD  shift, and go to state 69

    $default  reduce using rule 33 (variable)


State 40

   53 factor: CONST_INT •

    $default  reduce using rule 53 (factor)


State 41

   54 factor: CONST_FLOAT •

    $default  reduce using rule 54 (factor)


State 42

   45 unary_expression: ADDOP • unary_expression

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable          go to state 65
    unary_expression  go to state 70
    factor            go to state 56


State 43

   26 statement: compound_statement •

    $default  reduce using rule 26 (statement)


State 44

   17 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 71

    declaration_list  go to state 13


State 45

   24 statement: var_declaration •

    $default  reduce using rule 24 (statement)


State 46

    8 compound_statement: LCURL statements • RCURL
   23 statements: statements • statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 72
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    SEMICOLON    shift, and go to state 38
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    compound_statement    go to state 43
    type_specifier        go to state 44
    var_declaration       go to state 45
    statement             go to state 73
    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    expression_statement  go to state 55
    factor                go to state 56


State 47

   22 statements: statement •

    $default  reduce using rule 22 (statements)


State 48

   36 expression: variable • ASSIGNOP logic_expression
   50 factor: variable •
   55       | variable • INCOP
   56       | variable • DECOP

    INCOP     shift, and go to state 74
    DECOP     shift, and go to state 75
    ASSIGNOP  shift, and go to state 76

    $default  reduce using rule 50 (factor)


State 49

   49 expression_statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 77


State 50

   35 expression: logic_expression •

    $default  reduce using rule 35 (expression)


State 51

   37 logic_expression: rel_expression •
   38                 | rel_expression • LOGICOP rel_expression

    LOGICOP  shift, and go to state 78

    $default  reduce using rule 37 (logic_expression)


State 52

   39 rel_expression: simple_expression •
   40               | simple_expression • RELOP simple_expression
   42 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 79
    RELOP  shift, and go to state 80

    $default  reduce using rule 39 (rel_expression)


State 53

   41 simple_expression: term •
   44 term: term • MULOP unary_expression

    MULOP  shift, and go to state 81

    $default  reduce using rule 41 (simple_expression)


State 54

   43 term: unary_expression •

    $default  reduce using rule 43 (term)


State 55

   25 statement: expression_statement •

    $default  reduce using rule 25 (statement)


State 56

   47 unary_expression: factor •

    $default  reduce using rule 47 (unary_expression)


State 57

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement •

    $default  reduce using rule 6 (func_definition)


State 58

   10 parameter_list: parameter_list COMMA type_specifier • ID
   11               | parameter_list COMMA type_specifier •

    ID  shift, and go to state 82

    $default  reduce using rule 11 (parameter_list)


State 59

   19 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 83


State 60

   28 statement: IF LPAREN • expression RPAREN statement
   29          | IF LPAREN • expression RPAREN statement ELSE statement

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable           go to state 48
    expression         go to state 84
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56


State 61

   27 statement: FOR LPAREN • expression_statement expression_statement expression RPAREN statement
   61          | FOR LPAREN • expression_statement expression_statement expression RPAREN statement

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    SEMICOLON    shift, and go to state 38
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    expression_statement  go to state 85
    factor                go to state 56


State 62

   30 statement: WHILE LPAREN • expression RPAREN statement

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable           go to state 48
    expression         go to state 86
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56


State 63

   32 statement: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 87


State 64

   31 statement: PRINTLN LPAREN • ID RPAREN SEMICOLON

    ID  shift, and go to state 88


State 65

   50 factor: variable •
   55       | variable • INCOP
   56       | variable • DECOP

    INCOP  shift, and go to state 74
    DECOP  shift, and go to state 75

    $default  reduce using rule 50 (factor)


State 66

   46 unary_expression: NOT unary_expression •

    $default  reduce using rule 46 (unary_expression)


State 67

   52 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 89


State 68

   51 factor: ID LPAREN • argument_list RPAREN

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    $default  reduce using rule 58 (argument_list)

    variable           go to state 65
    logic_expression   go to state 90
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56
    argument_list      go to state 91
    arguments          go to state 92


State 69

   34 variable: ID LTHIRD • expression RTHIRD

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable           go to state 48
    expression         go to state 93
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56


State 70

   45 unary_expression: ADDOP unary_expression •

    $default  reduce using rule 45 (unary_expression)


State 71

   20 declaration_list: ID •
   21                 | ID • LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 15

    $default  reduce using rule 20 (declaration_list)


State 72

    8 compound_statement: LCURL statements RCURL •

    $default  reduce using rule 8 (compound_statement)


State 73

   23 statements: statements statement •

    $default  reduce using rule 23 (statements)


State 74

   55 factor: variable INCOP •

    $default  reduce using rule 55 (factor)


State 75

   56 factor: variable DECOP •

    $default  reduce using rule 56 (factor)


State 76

   36 expression: variable ASSIGNOP • logic_expression

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable           go to state 65
    logic_expression   go to state 94
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56


State 77

   49 expression_statement: expression SEMICOLON •

    $default  reduce using rule 49 (expression_statement)


State 78

   38 logic_expression: rel_expression LOGICOP • rel_expression

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable           go to state 65
    rel_expression     go to state 95
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56


State 79

   42 simple_expression: simple_expression ADDOP • term

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable          go to state 65
    term              go to state 96
    unary_expression  go to state 54
    factor            go to state 56


State 80

   40 rel_expression: simple_expression RELOP • simple_expression

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable           go to state 65
    simple_expression  go to state 97
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56


State 81

   44 term: term MULOP • unary_expression

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable          go to state 65
    unary_expression  go to state 98
    factor            go to state 56


State 82

   10 parameter_list: parameter_list COMMA type_specifier ID •

    $default  reduce using rule 10 (parameter_list)


State 83

   19 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 19 (declaration_list)


State 84

   28 statement: IF LPAREN expression • RPAREN statement
   29          | IF LPAREN expression • RPAREN statement ELSE statement

    RPAREN  shift, and go to state 99


State 85

   27 statement: FOR LPAREN expression_statement • expression_statement expression RPAREN statement
   61          | FOR LPAREN expression_statement • expression_statement expression RPAREN statement

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    SEMICOLON    shift, and go to state 38
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    expression_statement  go to state 100
    factor                go to state 56


State 86

   30 statement: WHILE LPAREN expression • RPAREN statement

    RPAREN  shift, and go to state 101


State 87

   32 statement: RETURN expression SEMICOLON •

    $default  reduce using rule 32 (statement)


State 88

   31 statement: PRINTLN LPAREN ID • RPAREN SEMICOLON

    RPAREN  shift, and go to state 102


State 89

   52 factor: LPAREN expression RPAREN •

    $default  reduce using rule 52 (factor)


State 90

   60 arguments: logic_expression •

    $default  reduce using rule 60 (arguments)


State 91

   51 factor: ID LPAREN argument_list • RPAREN

    RPAREN  shift, and go to state 103


State 92

   57 argument_list: arguments •
   59 arguments: arguments • COMMA logic_expression

    COMMA  shift, and go to state 104

    $default  reduce using rule 57 (argument_list)


State 93

   34 variable: ID LTHIRD expression • RTHIRD

    RTHIRD  shift, and go to state 105


State 94

   36 expression: variable ASSIGNOP logic_expression •

    $default  reduce using rule 36 (expression)


State 95

   38 logic_expression: rel_expression LOGICOP rel_expression •

    $default  reduce using rule 38 (logic_expression)


State 96

   42 simple_expression: simple_expression ADDOP term •
   44 term: term • MULOP unary_expression

    MULOP  shift, and go to state 81

    $default  reduce using rule 42 (simple_expression)


State 97

   40 rel_expression: simple_expression RELOP simple_expression •
   42 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 79

    $default  reduce using rule 40 (rel_expression)


State 98

   44 term: term MULOP unary_expression •

    $default  reduce using rule 44 (term)


State 99

   28 statement: IF LPAREN expression RPAREN • statement
   29          | IF LPAREN expression RPAREN • statement ELSE statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 23
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    SEMICOLON    shift, and go to state 38
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    compound_statement    go to state 43
    type_specifier        go to state 44
    var_declaration       go to state 45
    statement             go to state 106
    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    expression_statement  go to state 55
    factor                go to state 56


State 100

   27 statement: FOR LPAREN expression_statement expression_statement • expression RPAREN statement
   61          | FOR LPAREN expression_statement expression_statement • expression RPAREN statement

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable           go to state 48
    expression         go to state 107
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56


State 101

   30 statement: WHILE LPAREN expression RPAREN • statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 23
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    SEMICOLON    shift, and go to state 38
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    compound_statement    go to state 43
    type_specifier        go to state 44
    var_declaration       go to state 45
    statement             go to state 108
    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    expression_statement  go to state 55
    factor                go to state 56


State 102

   31 statement: PRINTLN LPAREN ID RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 109


State 103

   51 factor: ID LPAREN argument_list RPAREN •

    $default  reduce using rule 51 (factor)


State 104

   59 arguments: arguments COMMA • logic_expression

    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    variable           go to state 65
    logic_expression   go to state 110
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 56


State 105

   34 variable: ID LTHIRD expression RTHIRD •

    $default  reduce using rule 34 (variable)


State 106

   28 statement: IF LPAREN expression RPAREN statement •
   29          | IF LPAREN expression RPAREN statement • ELSE statement

    ELSE  shift, and go to state 111

    $default  reduce using rule 28 (statement)


State 107

   27 statement: FOR LPAREN expression_statement expression_statement expression • RPAREN statement
   61          | FOR LPAREN expression_statement expression_statement expression • RPAREN statement

    RPAREN  shift, and go to state 112


State 108

   30 statement: WHILE LPAREN expression RPAREN statement •

    $default  reduce using rule 30 (statement)


State 109

   31 statement: PRINTLN LPAREN ID RPAREN SEMICOLON •

    $default  reduce using rule 31 (statement)


State 110

   59 arguments: arguments COMMA logic_expression •

    $default  reduce using rule 59 (arguments)


State 111

   29 statement: IF LPAREN expression RPAREN statement ELSE • statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 23
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    SEMICOLON    shift, and go to state 38
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    compound_statement    go to state 43
    type_specifier        go to state 44
    var_declaration       go to state 45
    statement             go to state 113
    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    expression_statement  go to state 55
    factor                go to state 56


State 112

   27 statement: FOR LPAREN expression_statement expression_statement expression RPAREN • statement
   61          | FOR LPAREN expression_statement expression_statement expression RPAREN • statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    NOT          shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 23
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    SEMICOLON    shift, and go to state 38
    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42

    compound_statement    go to state 43
    type_specifier        go to state 44
    var_declaration       go to state 45
    statement             go to state 114
    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    expression_statement  go to state 55
    factor                go to state 56


State 113

   29 statement: IF LPAREN expression RPAREN statement ELSE statement •

    $default  reduce using rule 29 (statement)


State 114

   27 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement •
   61          | FOR LPAREN expression_statement expression_statement expression RPAREN statement •
